--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-Django==3.2
-djangorestframework==3.12.0
+Django==3.2.3
+djangorestframework==3.12.4
 djoser==2.1.0
-djangorestframework-simplejwt==4.8
 gunicorn==20.1.0
+Pillow==11.2.1
