перехожу на другой пк

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,19 @@
 [flake8]
 ignore =
-    W503
+    W503,
+    F811
 exclude =
     tests/,
     */migrations/,
     data/
     venv/,
     env/,
+    .venv/,
+    .env/,
+    backend/venv/,
+    backend/env/,
+    backend/.venv/,
+    backend/.env/,
     docs/,
     frontend/,
     infra/
