--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,4 +6,6 @@ Pillow==11.2.1
 django-cors-headers==4.5.0
 psycopg2-binary==2.9.3
 django-filter==23.1
-reportlab=4.4.1
+reportlab==4.4.1
+flake8==6.0.0
+flake8-isort==6.0.0
