--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ volumes:
   pg_data:
   static:
   media:
+  import_data:
 
 services:
   db:
@@ -29,7 +30,7 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/pg_data
   backend:
-    container_name: foodgram-b
+    container_name: foodgram-backend
     depends_on:
       - db
     build: ./backend/
@@ -38,8 +39,9 @@ services:
     volumes:
       - static:/backend_static
       - media:/user_media
+      - ./data:/data
   frontend:
-    container_name: foodgram-f
+    container_name: foodgram-frontend
     env_file:
       - .env
     build: ./frontend/
