--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,6 +9,11 @@ server {
         client_max_body_size 20M;
     }
 
+    location /s/ {
+        proxy_set_header Host $http_host;
+        proxy_pass http://backend:8000/api/s/;
+    }
+
     location /admin/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/admin/;
@@ -20,11 +25,11 @@ server {
         client_max_body_size 20M;
     }
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        index redoc.html;
-        try_files $uri /api/docs/redoc.html;
-    }
+    # location /api/docs/ {
+    #     root /usr/share/nginx/html;
+    #     index redoc.html;
+    #     try_files $uri /api/docs/redoc.html;
+    # }
 
     # location / {
     #     alias /static/;
