--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
           context: ./backend/
           push: true
           # latest, чтобы на сервере и в compose не указывать версию
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/kittygram_backend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodgram_backend:latest
 
   frontend_tests:
     runs-on: ubuntu-latest
@@ -115,7 +115,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/kittygram_frontend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodgram_frontend:latest
 
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
@@ -135,7 +135,7 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/kittygram_gateway:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodgram_nginx:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -154,7 +154,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: "docker-compose.production.yml"
-          target: "kittygram"
+          target: "foodgram"
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -165,7 +165,7 @@ jobs:
           # команды
           script: |
             set -e
-            cd kittygram
+            cd foodgram
             sudo docker compose -f docker-compose.production.yml pull
             sudo docker compose -f docker-compose.production.yml down
             sudo docker compose -f docker-compose.production.yml up -d
@@ -182,7 +182,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            Деплой Kittygram успешно выполнен!
+            Деплой Foodgram успешно выполнен!
             Push выполнен ${{ github.actor }}.
             Commit: [${{ github.event.head_commit.message }}](https://github.com/${{ github.repository }}/commit/${{github.sha}}).
           format: markdown
