--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,7 +89,7 @@ jobs:
       # Эта команда устанавливает зависимости для фронтенда
       run: |
         cd frontend/
-        npm ci
+        npm install --legacy-peer-deps
 
     - name: Test frontend
       # Запускаем тесты
@@ -133,7 +133,7 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./nginx/
+          context: ./infra/
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/foodgram_nginx:latest
 
