--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,7 @@ jobs:
       run: |
         cd frontend/
         npm install --legacy-peer-deps
+        npm install timers-browserify --save-dev
 
     - name: Test frontend
       # Запускаем тесты
