--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,6 +166,7 @@ jobs:
             sudo docker compose -f docker-compose.production.yml up -d
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --no-input
+            sudo docker compose -f docker-compose.production.yml exec backend python manage.py import_demo_ingredients
 
   send_message:
     runs-on: ubuntu-latest
