--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,5 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt --no-cache-dir
 COPY . .
 COPY ../fonts ../
+COPY ./data /app/data
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "foodgram_backend.wsgi"]
