--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-      - name: Set up Doecker Buildx
+      - name: Set up Docker Buildx
         # установить сборщик контенеров
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker
