--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -16,6 +16,7 @@ services:
     container_name: foodgram-backend
     depends_on:
       - db
+    restart: always
     image: kldaniil/foodgram_backend
     env_file:
       - .env
