--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,6 +3,12 @@ server {
     client_max_body_size 20M;
     index index.html;
 
+    # Не открывается
+    # location /api/docs/ {
+    #     root /usr/share/nginx/html;
+    #     try_files $uri $uri/redoc.html;
+    # }
+
     location /api/ {
         proxy_set_header Host $http_host;
         proxy_pass http://backend:8000/api/;
@@ -24,23 +30,10 @@ server {
         alias /media/;
         client_max_body_size 20M;
     }
-
-    # location /api/docs/ {
-    #     root /usr/share/nginx/html;
-    #     index redoc.html;
-    #     try_files $uri /api/docs/redoc.html;
-    # }
-
-    # location / {
-    #     alias /static/;
-    #     try_files $uri $uri/ /index.html;
-    # }
     
     location / {
         alias /static/;
-        # root /usr/share/nginx/html;
         index  index.html index.htm;
-        # try_files $uri /index.html;
         try_files $uri $uri/ /index.html;
       }
 
