--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,11 +3,10 @@ server {
     client_max_body_size 20M;
     index index.html;
 
-    # Не открывается
-    # location /api/docs/ {
-    #     root /usr/share/nginx/html;
-    #     try_files $uri $uri/redoc.html;
-    # }
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
 
     location /api/ {
         proxy_set_header Host $http_host;
@@ -17,7 +16,7 @@ server {
 
     location /s/ {
         proxy_set_header Host $http_host;
-        proxy_pass http://backend:8000/api/s/;
+        proxy_pass http://backend:8000/s/;
     }
 
     location /admin/ {
