Исправил путь до доков в compose

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -43,4 +43,4 @@ services:
     volumes:
       - static:/static
       - media:/media
-      - ./docs/:/usr/share/nginx/html/api/docs/
+      - ./infra/docs/:/usr/share/nginx/html/api/docs/
